test/sema/generics/generic_struct_inference_multiple_params_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T, U> { x: T, y: T, z: U }

fn main(): void {
  // CHECK: [[# @LINE + 2 ]]:24: error: an expression of type '() -> void' cannot be assigned to a variable of type 'number'
  // CHECK: [[# @LINE + 1 ]]:13: error: field 'y' is not initialized
  let s = S { x: 1, y: main, z: 3 };
}

// CHECK-NOT: {{.*error.*}}
